# Distributed-Task-Scheduler-with-Deadlock-Detection

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
api/: app.py  users.json
core/: CMakeLists.txt  banker.cpp  banker.h  deadlock_detector.cpp  deadlock_detector.h  main.cpp  resource_manager.cpp  resource_manager.h  scheduler.cpp  scheduler.h  task.cpp  task.h  worker.cpp  worker.h
dashboard/: app.js  index.html  login.html  register.html  style.css
nginx/: default.conf  nginx.conf
shared/: input.json  input_backup.json  state.json
shared/uploads/: T1_test.py
